fix overflow on home view

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@
     left:0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .home {
